--- a/server/credentials.py.example
+++ b/server/credentials.py.example
@@ -1,2 +1,5 @@
+# This file is optional. You can also specify credentials with
+# the GMAIL_BUMPER_EMAIL and GMAIL_BUMPER_PASSWORD envars
+
 email='emailaddress@gmail.com'
 password='passw0rd'
